fix: refactor dropdown structure and styles for improved layout and functionality, adjust overflow handling and max-height for better visibility

--- a/src/styles/components/custom_select.scss
+++ b/src/styles/components/custom_select.scss
@@ -40,18 +40,15 @@
   .dropdown {
     @include scroll-fade-overlay(30px);
     position: absolute;
-    margin-top: 4px;
     top: 100%;
     left: 0;
     right: 0;
-    overflow-y: auto;
+    overflow: hidden;
     display: none;
     z-index: 112;
     box-shadow: 0 9px 28px 8px rgba(0, 0, 0, 0.05), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12);
     background: var(--color-grey-800);
     padding: 0px 1px;
-    min-width: 200px;
-    max-height: 600px;
     @include bg-image;
     background-position: initial;
     background-image: url(../../assets/img/overlay.svg);
@@ -59,6 +56,14 @@
     padding-top: 66px;
     margin: 0;
     top: 0;
+  }
+
+  .dropdown-inner {
+    overflow: auto;
+    height: 100%;
+    min-height: 0;
+    min-width: 200px;
+    max-height: 534px;
   }
 
   .dropdown.open {
